[project]
name = "drone-dance-rescue"
version = "1.0.0"
description = "OpenEnv-style drone rescue simulation backend"
readme = "README.md"
requires-python = ">=3.11"

dependencies = [
    "fastapi==0.115.12",
    "uvicorn[standard]==0.34.0",
    "pydantic==2.11.3",
    "pyyaml==6.0.2",
    "requests==2.32.3"
]

[tool.setuptools]
py-modules = ["app", "env", "tasks", "grader", "inference"]
