[project]
name = "drone-dance-rescue"
version = "1.0.0"
description = "OpenEnv drone rescue simulation environment"
readme = "README.md"
requires-python = ">=3.10"

dependencies = [
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.30.0",
    "pydantic>=2.0",
    "pyyaml>=6.0",
    "requests>=2.32.0",
    "openenv-core>=0.2.0"
]

[project.scripts]
server = "app:app"

[tool.setuptools]
py-modules = ["app", "env", "tasks", "grader", "inference"]
