[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "drone-dance-rescue"
version = "1.0.0"
description = "OpenEnv drone rescue simulation backend"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.30.0",
    "pydantic>=2.0",
    "pyyaml>=6.0",
    "requests>=2.32.0",
    "openenv-core>=0.2.0"
]

[project.scripts]
server = "app:main"

[tool.setuptools]
py-modules = ["app", "env", "tasks", "grader", "inference"]
